--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "anime_flutter" "\0"
+            VALUE "CompanyName", "com.i-as.dev" "\0"
+            VALUE "FileDescription", "Anime App" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "anime_flutter" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "anime_flutter.exe" "\0"
-            VALUE "ProductName", "anime_flutter" "\0"
+            VALUE "InternalName", "Anime App" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.i-as.dev. All rights reserved." "\0"
+            VALUE "OriginalFilename", "Anime_App.exe" "\0"
+            VALUE "ProductName", "Anime App" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
